--- a/_config.yml
+++ b/_config.yml
@@ -1,28 +1,12 @@
-#Update all the sections by editing the data.yml file inside _data folder.
 
 # Site Settings
 title: Venkata Guravareddy Resume
 url: 'https://bsrgsit.github.io'
-baseurl: '/' #change it according to your repository name
-# Style will be applied only after restarting the build or serve. Just choose one of the options.
-theme_skin: green # blue turquoise green berry orange ceramic
+baseurl: '/' 
 
-# Tracker
-analytics: UA-83979019-1
+theme_skin: green # blue turquoise green berry orange ceramic
 
 # Sass/SCSS
 sass:
   sass_dir: _sass
-  style: compressed # http://sass-lang.com/documentation/file.SASS_REFERENCE.html#output_style
-
-# Build settings
-encoding: "utf-8"
-compress_html: # - http://jch.penibelst.de/
-  clippings: all
-  ignore:
-    envs: development
-
-# Development Settings
-port: 4000
-host: 0.0.0.0
-safe: false
+  style: compressed
